# flow

./: .gitignore  .release-please-config.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.gpu  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: run_batch_20.py  run_benchmark.py  run_chaining_demo.py  run_full_benchmark.py  run_narrated_benchmark.py  run_short_film.py
benchmarks/prompts/: openx-intro-15s.json  water-chaining-demo.json
benchmarks/results/: benchmark-results.json  full-benchmark-results.json  narrated-benchmark-results.json
config/: config.example.toml
docs/architecture/: system-design.md  tech-stack.md
docs/costs/: projections.md
docs/research/: agent-tool-loop-nanocode.md  agentic-video-editing-analysis.md  google-flow-analysis.md  gpu-infrastructure.md  mi300x-benchmarking.md  palmier-video-tools-catalog.md  publishing.md  video-models.md
docs/research/tools/: 01-context-read.md  02-timeline-edit.md  03-text-generate.md  04-color-media.md  05-flow-native.md  06-runtime-mcp-agent.md
scripts/: deploy_modal.sh
src/flow/: __init__.py  __main__.py  characters.py  cli.py  config.py  generator.py  keyframes.py  parallel_generator.py  pipeline.py  postproduction.py  publisher.py  scheduler.py  schemas.py  tts_miso.py  validation.py  writer.py
src/gpu_backend/: __init__.py  client.py  modal_server.py  server.py  xdit_parallel.py
tests/: test_agent.py  test_characters.py  test_config.py  test_db.py  test_deploy.py  test_engine.py  test_publisher.py  test_schemas.py  test_tts.py  test_writer.py
(+44 files in other folders)
