[project]
name = "flow"
version = "0.2.0"
description = "Open-source autonomous video generation pipeline. Like Google Flow, but yours."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "OpenX-Inc" }]

dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.11.0",
    "edge-tts>=7.0.0",
    "ffmpeg-python>=0.2.0",
    "typer>=0.15.0",
    "rich>=14.0.0",
    "tomli>=2.2.0; python_version < '3.11'",
    "sqlmodel>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.26.0",
]
gpu = [
    "torch>=2.6.0",
    "diffusers>=0.33.0",
    "transformers>=4.50.0",
    "accelerate>=1.5.0",
]

[project.scripts]
flow = "flow.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flow", "src/gpu_backend"]

[tool.ruff]
target-version = "py312"
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
